Implemented uploadTaskImage
